--- a/tiglle-jwt-auth/pom.xml
+++ b/tiglle-jwt-auth/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.tiglle</groupId>
-        <artifactId>tiglle-jwt</artifactId>
+        <artifactId>tiglle-auth</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -20,14 +20,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!--========================以下依赖使用一种即可=======================-->
+        <!--jjwt依赖  第一种jwt方式-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
         </dependency>
+        <!--java-jwt依赖  第二种jwt方式-->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
         </dependency>
+
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
