--- a/tiglle-jwt/pom.xml
+++ b/tiglle-jwt/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>tiglle-jwt-auth</artifactId>
+    <artifactId>tiglle-jwt</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <name>tiglle-jwt-auth</name>
