--- a/tiglle-spring-security/src/main/resources/application.properties
+++ b/tiglle-spring-security/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=tiglle-spring-security
 
 
-spring.security.user.name=admin
-spring.security.user.password==Aa123456
-spring.security.user.roles=superadmin,guest,manager
+#spring.security.user.name=admin
+#spring.security.user.password==Aa123456
+#spring.security.user.roles=superadmin,guest,manager
