--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
         </dependency>
-
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.23</version>
+        </dependency>
     </dependencies>
 </project>
